--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "@types/node-fetch": "^2.6.4",
     "abort-controller": "^3.0.0",
     "agentkeepalive": "^4.2.1",
+    "bip32": "^5.0.0-rc.0",
+    "bip39": "^3.1.0",
     "form-data-encoder": "1.7.2",
     "formdata-node": "^4.3.2",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "tiny-secp256k1": "^2.2.3"
   },
   "devDependencies": {
     "@swc/core": "^1.3.102",
