installs bun prior to running bootstrap on test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,12 @@ jobs:
         with:
           node-version: '18'
 
+      # ➜ Install Bun
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: 'latest'
+
       - name: Bootstrap
         run: ./scripts/bootstrap
 
